src/test/deca/context/invalid/personalTests/MethodNoDefine.deca
class A{
    int a;

}

class B extends A{
    int b;

    void display(){
        println("B");
    }
}

{
    A a = new B();
    a.display();
}